@@ -15,6 +15,8 @@ User visible changes
   as well as those libm.so functions which do not have a better
   counterpart in ANSI CL are available.
 
+* New supported character set CHARSET:KOI8-U.
+
 Other modifications
 -------------------
 
