@@ -6315,6 +6315,9 @@ corresponding (constant) symbol in the <code>CHARSET</code> package.
   <li><code>KOI8-R</code>,
       an extension of the ASCII character set,
       a popular character set for the Russian language.
+  <li><code>KOI8-U</code>,
+      an extension of the ASCII character set,
+      a popular character set for the Ukrainian language.
   <li><code>JIS_X0201</code>,
       a character set for the Japanese language.
   <li><code>MAC-ARABIC</code>,
