@@ -1522,6 +1522,7 @@ LISPSYM(iso8859_13,"ISO-8859-13",charset)
 LISPSYM(iso8859_14,"ISO-8859-14",charset)
 LISPSYM(iso8859_15,"ISO-8859-15",charset)
 LISPSYM(koi8_r,"KOI8-R",charset)
+LISPSYM(koi8_u,"KOI8-U",charset)
 LISPSYM(mac_arabic,"MAC-ARABIC",charset)
 LISPSYM(mac_centraleurope,"MAC-CENTRAL-EUROPE",charset)
 LISPSYM(mac_croatian,"MAC-CROATIAN",charset)
