@@ -139,6 +139,7 @@ XPSEUDODATA(struct nls_table, nls_iso8859_13_table)
 XPSEUDODATA(struct nls_table, nls_iso8859_14_table)
 XPSEUDODATA(struct nls_table, nls_iso8859_15_table)
 XPSEUDODATA(struct nls_table, nls_koi8_r_table)
+XPSEUDODATA(struct nls_table, nls_koi8_u_table)
 XPSEUDODATA(struct nls_table, nls_mac_arabic_table)
 XPSEUDODATA(struct nls_table, nls_mac_centraleurope_table)
 XPSEUDODATA(struct nls_table, nls_mac_croatian_table)
